--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         volumes:
             - .:/var/www/html
         networks:
-            - wordpressadmin_mynetwork
+            - mynetwork
 
     nginx:
         image: nginx:latest
@@ -19,10 +19,25 @@ services:
         depends_on:
             - app
         networks:
-            - wordpressadmin_mynetwork
+            - mynetwork
+
+    mysql:
+        image: mysql:8.0
+        environment:
+            MYSQL_DATABASE: wordpress
+            MYSQL_USER: haitun
+            MYSQL_PASSWORD: cFzMv0Ha^&EIz&g6Va
+            MYSQL_ROOT_PASSWORD: cFzMv0Ha^&EIz&g6Va
+        ports:
+            - "3307:3306"
+        volumes:
+            - ./mysql:/var/lib/mysql
+            - ./my.cnf:/etc/mysql/my.cnf
+        networks:
+            - mynetwork
 
 networks:
-    wordpressadmin_mynetwork:
-        external: true
+    mynetwork:
+        driver: bridge
 volumes:
     dbdata:
