--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,20 @@ services:
         networks:
             - mynetwork
 
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        ports:
+            - "8001:80"
+        environment:
+            - PMA_HOST=47.106.115.51
+        #      - PMA_HOST=wordpressadmin_mynetwork
+        #      - PMA_USER=haitun
+        #      - PMA_PASSWORD=cFzMv0Ha^&EIz&g6Va
+        networks:
+            - mynetwork
+        depends_on:
+            - mysql
+
 networks:
     mynetwork:
         driver: bridge
