修改mysql配置文件

--- a/my.cnf
+++ b/my.cnf
@@ -1,5 +1,5 @@
 [mysqld]
 lower_case_table_names = 1
-bind-address=47.106.115.51
+#bind-address=47.106.115.51
 #无密码登录
-#skip-grant-tables
+skip-grant-tables
