--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,9 @@ services:
             - "8001:80"
         environment:
             - PMA_HOST=47.106.115.51
-        #      - PMA_HOST=wordpressadmin_mynetwork
-        #      - PMA_USER=haitun
-        #      - PMA_PASSWORD=cFzMv0Ha^&EIz&g6Va
+            - PMA_PORT=3307
+#            - PMA_USER=kaixinjiuhao
+#            - PMA_PASSWORD=cFzMv0Ha^&EIz&g6Va
         networks:
             - mynetwork
         depends_on:
